# skill-bundle-attestation

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  SECURITY.md  TESTING.md  ci_validate.py  manifest.json  mutation-baseline.json  pyproject.toml  requirements-dev.txt  requirements-strict.txt  sba-approval-v1.schema.json  sba-audit-v1.schema.json  sba-content-v1.schema.json  sba-statement-v1.schema.json  sba.py  sba_archive.py  sba_attest.py  sba_crypto.py  sba_digest.py  sba_verify.py  sba_zip.py  setup.cfg  sitecustomize.py
.github/workflows/: ci-strict.yml  ci.yml  release.yml  security.yml
RFC/: sba-whitepaper.tex
docs/: specification.md  threat-model.md
docs/plans/: 2026-02-03-mutmut-chunked-runner-design.md  2026-02-03-mutmut-chunked-runner.md  2026-02-04-mutation-killrate.md
examples/: tv-1-attestation.json  tv-2-attestation.json  tv-3-attestation.json
examples/e2e/: README.md
examples/e2e/bundle/: SKILL.md  tool.py
examples/e2e/keys/: ed25519_private.pem  ed25519_public.pem
sba_schemas/: __init__.py
scripts/: eval_invariants.py  generate_sbom.py  mutation_guard.py  run_mutmut.py  run_mutmut_chunks.py
test-vectors/tv-1-minimal/: SKILL.md
test-vectors/tv-2-complex/: SKILL.md  helper.py
test-vectors/tv-2-complex/nested/: config.json
tests/: conftest.py  test_archive_security.py  test_archive_tar.py  test_attest.py  test_audit_approval.py  test_cli.py  test_crypto.py  test_digest.py  test_mutmut_runner.py  test_sba_cli.py  test_schema.py  test_signatures.py  test_sigstore.py  test_verify.py  test_zip.py
(+2 files in other folders)
